fix style: fix problem with width of navbar and showing overflow-x (set it to hidden)

--- a/client/src/components/blogs/assets/Navbar.css
+++ b/client/src/components/blogs/assets/Navbar.css
@@ -15,6 +15,7 @@
     padding: 1.25em 1.25em 1.5em 1.25em;
 
     overflow-y: auto;
+    overflow-x: hidden;
 
     box-shadow: 0px 0px 20px 0px var(--clr-box-shadow);
     background-color: white;
@@ -131,7 +132,8 @@
 
         margin: 0;
 
-        overflow-y: auto;
+        overflow-y: hidden;
+        overflow-x: visible;
 
         position: relative;
         top: 0;
